test/bad/fun_arg_num.lat
int main() {
    f();
}

void f(int a) {

}
